<resources>
    <string name="app_name">TIKET</string>
    <string name="details_button">TIKET</string>
    <string name="resep_title">TIKET</string>
    <string name="resep_description">TIKET</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kirimdata">Lihat Produk</string>
    <string name="qr">Scan QR Promosi</string>
    <string name="location">Location</string>
    <string name="video">video</string>
    <string name="appwidget_text">TIKET</string>
    <string name="add_widget">TIKET</string>
    <string name="configure">Configure</string>

    <string name="location_text">Latitude: %1$.4f \n Longitude: %2$.4f \n Timestamp: %3$tr</string>
    <string name="alamat_text">"Nama: %1$s \n Alamat: %2$s \n Timestamp:%3$tr"</string>
    <string name="temukan_halte_di_kota_anda">Temukan halte di kota anda...!</string>
    <string name="track_lokasi">Track Lokasi</string>
    <string name="pilih_lokasi">Pilih Lokasi</string>
    <string name="todo">TODO</string>
</resources>
