<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:background="@color/colorGrey">


    <Button

        android:id="@+id/kirimdata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginBottom="17dp"
        android:text="@string/kirimdata" />

    <Button

        android:id="@+id/qr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginBottom="122dp"
        android:text="@string/qr" />

    <Button

        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_above="@+id/qr"
        android:layout_alignStart="@+id/video"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-221dp"
        android:layout_marginBottom="-54dp"
        android:text="@string/location"
        android:layout_alignLeft="@+id/video"
        android:layout_marginLeft="-221dp" />

    <Button

        android:id="@+id/video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kirimdata"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-63dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:text="@string/video" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        app:srcCompat="@drawable/loader" />
</RelativeLayout>